--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -6,13 +6,13 @@
   margin-left: auto;
   margin-right: auto;
   padding-top: rem(81);
-  padding-bottom: rem(74);
+  padding-bottom: rem(85);
 
   @include mq("md") {
     padding-top: rem(471);
     padding-left: rem(25);
     padding-right: rem(25);
-    padding-bottom: 0;
+    padding-bottom: 140px;
     }
   }
 
@@ -28,11 +28,17 @@
       max-width: 520px;
       padding-left: 24px;
       padding-right: 24px;
+      margin-top: 0;
     }
   }
 
   .voice-card__item-box:not(:first-child) {
     margin-top: 41px;
+
+    @include mq("md") {
+      margin-top: 0;
+      margin-left: 40px;
+    }
   }
 
   .voice-card__title-sub {
@@ -46,15 +52,16 @@
     font-size: rem(12);
     color: $green;
     border: rem(1) solid $green;
-    padding: rem(7) rem(12) rem(3.5) rem(12);
+    padding: rem(7) rem(10) rem(3.5) rem(12);
     // max-width: rem(108);
     white-space: nowrap;
     margin-top: -2px;
-    max-width: 120px;
+    // max-width: 120px;
     box-sizing: border-box;
     overflow: hidden;
     // padding-top: 16px;
-    width: 100%;
+    max-width: 100%;
+    display: inline-block;
 
 //    /* ライセンス講習のためのmax-width */
 //    &:first-of-type {
@@ -68,7 +75,7 @@
 
     @include mq("md") {
     padding: rem(7) 20px rem(3.5) 20px;
-    max-width: 117px;
+    // max-width: 117px;
 
     }
   }
@@ -76,7 +83,7 @@
   .voice-card__title-text {
     font-size: 16px;
     font-weight: $medium;
-    margin-top: 5px;
+    margin-top: -3px;
 
     @include mq("md") {
       font-size: 24px;
@@ -103,6 +110,7 @@
 
   .voice-card__img {
     margin-left: 13px;
+    max-width: 151px;
 
     @include mq("md") {
     max-width: 180px;
@@ -153,7 +161,8 @@
 
     @include mq("md") {
       display: flex;
-      justify-content: space-between;
+      // justify-content: space-between;
+      margin-top: 30px;
     }
   }
 
@@ -191,7 +200,7 @@
         width: rem(71);
         height: rem(162);
         // bottom: rem(130);
-        bottom: -5%;
+        bottom: 8%;
         right: calc(50% - min(48vw, rem(550)));
     }
   }
