--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -112,6 +112,10 @@
 }
 
 .blog-card__img {
+  max-width: 301px;
+}
+
+.blog-card__img img {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 301/201;
