--- a/src/sass/page/_information.scss
+++ b/src/sass/page/_information.scss
@@ -24,12 +24,20 @@
 
 .information__img {
   margin-top: 26px;
+  max-width: 345px;
+
+  @include mq("md") {
+    max-width: 540px;
+    margin-top: 0;
+  }
+}
+
+.information__img {
   aspect-ratio: 345/227;
   object-fit: cover;
   width: 100%;
 
   @include mq("md") {
-    max-width: 540px;
     aspect-ratio: 540/356;
     margin-top: 0;
   }
