ピクパで修正

--- a/src/sass/page/_about-us__button-layout.scss
+++ b/src/sass/page/_about-us__button-layout.scss
@@ -2,7 +2,9 @@
 
 .about-us__button-layout {
   margin-top: rem(47);
-  padding-left: rem(62);
+  // padding-left: rem(62);
+  display: flex;
+  justify-content: center;
 
   @include mq("md") {
     display: flex;
