インフォメーションピクパ

--- a/src/sass/page/_about-us__inner.scss
+++ b/src/sass/page/_about-us__inner.scss
@@ -13,6 +13,7 @@ padding-bottom: rem(74);
   padding-left: rem(25);
   padding-right: rem(25);
   padding-bottom: 0;
+  height: 1075px;
 }
 }
 
@@ -34,7 +35,7 @@ padding-bottom: rem(74);
       background: url(/assets/images/about-us-logo.svg) center center / contain no-repeat;
       width: rem(194);
       height: rem(181);
-      bottom: rem(147);
+      bottom: 74px;
       right: calc(50% - min(48vw, rem(637)));
   }
 }
