--- a/src/sass/module/_section-title__main-large.scss
+++ b/src/sass/module/_section-title__main-large.scss
@@ -5,9 +5,10 @@
   // letter-spacing: 0.01em;
   line-height: 1.4;
   margin-bottom: -25px;
+  font-weight: $regular;
 
   @include mq("md") {
-    font-size: rem(40);
+    font-size: rem(80);
   }
 }
 
