--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -9,7 +9,7 @@
   padding-bottom: rem(90);
 
   @include mq("md") {
-    padding-top: rem(471);
+    padding-top: 143px;
     padding-left: rem(25);
     padding-right: rem(25);
     padding-bottom: 140px;
@@ -19,10 +19,18 @@
   .contact__logo-layout {
     display: flex;
     justify-content: center;
+    @include mq("md") {
+      display: block;
+      padding-left: 120px;
+      padding-right: 120px;
+    }
   }
 
   .contact__logo {
     max-width: 174px;
+    @include mq("md") {
+      max-width: 200px;
+    }
   }
 
   .contact-text-line {
@@ -39,6 +47,16 @@
   }
 
   .contact__container {
+
+    @include mq("md") {
+      display: flex;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+      padding: 80px 112px 80px 50px;
+      justify-content: space-between;
+    }
+  }
+
+  .contact__box {
     max-width: 295px;
     margin-left: auto;
     margin-right: auto;
@@ -47,6 +65,7 @@
       margin-left: 0;
       margin-right: 0;
       max-width: 440px;
+      width: 100%;
     }
   }
 
@@ -55,6 +74,7 @@
 
     @include mq("md") {
       display: flex;
+      margin-top: 24px;
     }
   }
 
@@ -79,13 +99,17 @@
   }
 
   .contact__img {
-    max-width: 295px;
+    // max-width: 295px;
+    width: 295px;
     height: 160px;
     margin-top: 16px;
 
     @include mq("md") {
-      height: 273px;
+      // max-width: 273px;
+      width: 273px;
       height: 148px;
+      margin-top: 0;
+      margin-left: 25px;
     }
 
   }
@@ -115,12 +139,17 @@
       display: flex;
       justify-content: center;
       padding-left: 0;
-      margin-top: rem(80);
+      margin-top: rem(40);
     }
   }
 
   .contact.section-title {
     margin-top: 16px;
+
+    @include mq("md") {
+      margin-top: 5px;
+      max-width: 315px;
+    }
   }
 
 
@@ -140,11 +169,23 @@
     right: 4%;
     // right: calc(50% - min(48vw, 600px));
 
+    @include mq("md") {
+      width: 301px;
+      height: 138px;
+      bottom: 65.4%;
+      right: calc(50% - min(48vw, 669px));
+    }
+
   }
 
   .top-button-img {
     width: 48px;
     height: 48px;
+
+    @include mq("md") {
+      width: 80px;
+      height: 80px;
+    }
   }
 
   .contact__top-button {
@@ -152,4 +193,16 @@
     content: "";
     right: 3.8%;
     bottom: 0%;
+
+    @include mq("md") {
+      right: -12%;
+    }
+  }
+
+  .contact__title-layout {
+
+    @include mq("md") {
+      padding-left: 81px;
+      border-left: 1px solid $green;
+    }
   }
