--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -14,7 +14,7 @@
   padding-bottom: rem(84);
 
   @include mq("md") {
-    padding-top: rem(100);
+    padding-top: 91px;
     padding-left: rem(25);
     padding-right: rem(25);
     padding-bottom: 100px;
@@ -47,9 +47,21 @@
 
     @include mq("md") {
       height: rem(1);
-      margin-top: rem(7);
+      margin-top: rem(2);
     }
   }
+
+  .price-text-line:nth-child(2) {
+    @include mq("md") {
+      margin-top: 3px;
+    }
+  }
+
+  // .price-text-line:nth-child(3) {
+  //   @include mq("md") {
+  //     margin-top: 2px;
+  //   }
+  // }
 
   .price-item__box {
     display: flex;
@@ -78,7 +90,7 @@
       display: block;
       clear: left;
       float: left;
-      width: 90%;
+      width: 88.7%;
   }
 }
 
@@ -94,7 +106,8 @@
       line-height: calc(24/16);
       display: block;
       float: left;
-      width: 10%;
+      width: 11.3%;
+      text-align: right;
     }
   }
 
@@ -109,7 +122,7 @@
     margin-top: 40px;
 
     @include mq("md") {
-      margin-top: 0;
+      margin-top: -2px;
     }
   }
 
@@ -149,6 +162,7 @@
       // max-width: 746px;
       max-width: 492px;
       margin-left: 93px;
+      margin-top: -1px;
     }
   }
 
@@ -174,7 +188,7 @@
         width: rem(437);
         height: rem(201);
         // bottom: rem(130);
-        bottom: 3%;
-        left: calc(50% - min(48vw, rem(625)));
+        bottom: 4.9%;
+        left: calc(50% - min(48vw, rem(620)));
     }
   }
