--- a/src/sass/page/_footer-menu.scss
+++ b/src/sass/page/_footer-menu.scss
@@ -2,16 +2,16 @@
 
 .footer-menu {
 
-  position: absolute;
-  z-index: 900;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: none;
+  // position: absolute;
+  // z-index: 900;
+  // top: 0;
+  // right: 0;
+  // bottom: 0;
+  // left: 0;
+  // display: none;
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
   background-color: $green;
-  overflow-y: scroll;
-  opacity: 1;
+  // overflow-y: scroll;
+  // opacity: 1;
 }
