--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -190,7 +190,7 @@
   margin-left: 18px;
 
   @include mq("md") {
-    font-size: 40px;
+    font-size: rem(40);
     margin-top: -5px;
     margin-left: 27px;
   }
@@ -256,15 +256,6 @@
   }
 }
 
-// @include mq("md") {
-// .campaign-swiper__button-prev,
-// .campaign-swiper__button-next {
-//     display: block; /* md メディアクエリの場合に表示 */
-//     height: 80px;
-//     width: 80px;
-//   }
-// }
-
 /* 矢印の擬似要素カスタマイズ */
 .campaign-swiper__button-prev::after,
 .campaign-swiper__button-next:after {
@@ -284,9 +275,11 @@
   width: 80px;
   display: block;
   position: absolute;
-  bottom: 50%;
-  left: 50%;
-  transform: translate(-164%, -560%);
+  bottom: 610%;
+  // left: 50%;
+  left: calc(50% - min(48vw, rem(131)));
+
+  // transform: translate(-164%, -560%);
   }
 }
 
@@ -299,9 +292,10 @@
   display: block;
   position: absolute;
   // margin-left: 80px;
-  bottom: 50%;
-  left: 50%;
-  transform: translate(35%, -560%);
+  bottom: 610%;
+  // left: 50%;
+  // transform: translate(35%, -560%);
+  left: calc(50% - min(48vw, rem(-27)));
   }
 }
 
