--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -191,11 +191,15 @@
   .contact__top-button {
     position: absolute;
     content: "";
-    right: 3.8%;
+    // right: 3.8%;
+    right: calc(50% - min(48vw, rem(620)));
     bottom: 2%;
 
     @include mq("md") {
-      right: -12%;
+      // right: -12%;
+    right: calc(50% - min(48vw, rem(620)));
+
+
     }
   }
 
