--- a/src/sass/page/_footer-menu__inner.scss
+++ b/src/sass/page/_footer-menu__inner.scss
@@ -4,7 +4,7 @@
 padding-left: rem(15);
 padding-right: rem(15);
 padding-top: 30px;
-padding-bottom: 50px;
+padding-bottom: 20px;
 margin-left: auto;
 margin-right: auto;
 position: relative;
@@ -17,17 +17,19 @@ position: relative;
   width: rem(19.5);
   height: rem(19.5);
   // bottom: rem(130);
-  bottom: 82.3%;
-  left: calc(50% - min(48vw, rem(620)));
+  bottom: 80.3%;
+  // left: calc(50% - min(48vw, 630px));
+  left: 4.5%;
 }
 
-.footer-menu__inner.inner::after {
+.footer-menu__inner::after {
   position: absolute;
   content: "";
   background: url(/assets/images/insta-logo.svg) center center / contain no-repeat;
   width: rem(19.5);
   height: rem(19.5);
   // bottom: rem(130);
-  bottom: 82.3%;
-  left: calc(50% - min(48vw, rem(620)));
+  bottom: 80.3%;
+  // left: calc(50% - min(48vw, rem(620)));
+  left: 15%;
 }
