--- a/src/sass/page/_campaign__inner.scss
+++ b/src/sass/page/_campaign__inner.scss
@@ -2,7 +2,7 @@
 
 .campaign__inner {
   padding-top: rem(38);
-  position: relative;
+  // position: relative;
 
   @include mq("md") {
     padding-top: rem(111);
