--- a/src/sass/page/_about-us__img2.scss
+++ b/src/sass/page/_about-us__img2.scss
@@ -5,9 +5,12 @@
   object-fit: cover;
   width: 82%;
   display: block;
-  max-width: rem(281);
-  margin-left: auto;
-  margin-right: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  // max-width: rem(281);
+  // margin-left: auto;
+  // margin-right: 0;
 
   @include mq("md") {
     aspect-ratio: 880/581;
