--- a/src/sass/page/_about-us__inner.scss
+++ b/src/sass/page/_about-us__inner.scss
@@ -35,7 +35,9 @@ padding-bottom: rem(74);
       background: url(/assets/images/about-us-logo.svg) center center / contain no-repeat;
       width: rem(194);
       height: rem(181);
-      bottom: 7%;
+      // bottom: 7%;
       right: calc(50% - min(48vw, rem(637)));
+      bottom: calc(50% - min(48vw, rem(465)));
+
   }
 }
