--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -98,6 +98,7 @@
 
   @include mq("md") {
     font-size: 16px;
+    text-indent: -1rem;
   }
 }
 
@@ -190,7 +191,7 @@
   display: block;
   position: absolute;
   top: 0;
-  right: calc(50% - min(48vw, rem(131)));
+  right: calc(50% - min(48vw, rem(133)));
   }
 }
 
@@ -198,8 +199,8 @@
 .campaign-swiper__button-box {
   display: flex;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -19%;
+  right: 5%;
   // transform: translate(130%, -90%);
   max-width: 240px;
 }
