フッターpc修正

--- a/src/sass/page/_footer-menu__container-left.scss
+++ b/src/sass/page/_footer-menu__container-left.scss
@@ -3,4 +3,10 @@
 .footer-menu__container-left {
   width: 50%;
   max-width: rem(200); /* 必要に応じて適切な幅を指定してください */
+
+  @include mq("md") {
+    display: flex;
+    max-width: 436px;
+    justify-content: space-between;
+  }
 }
