--- a/src/sass/page/_footer.scss
+++ b/src/sass/page/_footer.scss
@@ -4,4 +4,9 @@
   // height: 74px;
   background-color: $green;
   padding: 0 14px 56px 14px;
+
+  @include mq("md") {
+  padding: 0 14px 56px 14px;
+
+  }
 }
