フッターpc修正

--- a/src/sass/page/_footer-menu__container.scss
+++ b/src/sass/page/_footer-menu__container.scss
@@ -3,4 +3,10 @@
 .footer-menu__container {
   display: flex;
   justify-content: center;
+
+  @include mq("md") {
+    justify-content: left;
+    margin-top: 15px;
+    white-space: nowrap;
+  }
 }
