--- a/src/sass/page/_facebook-logo.scss
+++ b/src/sass/page/_facebook-logo.scss
@@ -2,6 +2,11 @@
 
 .facebook-logo {
   display: block;
-  width: rem(19.5);
-  height: rem(19.5);
+  width: rem(24);
+  height: rem(24);
+
+  @include mq("md") {
+    width: rem(32);
+    height: rem(32);
+  }
 }
