--- a/src/sass/page/_footer-logo-box.scss
+++ b/src/sass/page/_footer-logo-box.scss
@@ -2,4 +2,10 @@
 
 .footer-logo-box {
   display: flex;
+
+  @include mq("md") {
+    margin-left: 40px;
+    padding-top: 38px;
+    padding-bottom: 5px;
+  }
 }
