--- a/src/sass/page/_footer__copyright.scss
+++ b/src/sass/page/_footer__copyright.scss
@@ -6,4 +6,18 @@
   line-height: 1.5;
   color: $white;
   font-family: Gotu;
+  padding-left: rem(14);
+  padding-right: rem(14);
+  padding-bottom: rem(53);
+  background-color: $green;
+
+  @include mq("md") {
+    padding-bottom: rem(0);
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    line-height: calc(18/14);
+    padding-top: 47px;
+    padding-bottom: 80px;
+  }
 }
