--- a/src/sass/page/_footer__name-layout.scss
+++ b/src/sass/page/_footer__name-layout.scss
@@ -2,7 +2,7 @@
 
 .footer__name-layout {
   display: flex;
-  width: 100%;
-  height: rem(80);
+  // width: 100%;
+  // height: rem(80);
   align-items: center;
 }
