--- a/src/sass/page/_instagram-logo.scss
+++ b/src/sass/page/_instagram-logo.scss
@@ -2,7 +2,12 @@
 
 .instagram-logo {
   display: block;
-  width: rem(19.5);
-  height: rem(19.5);
-  margin-left: rem(20);
+  width: rem(24);
+  height: rem(24);
+  margin-left: rem(16);
+
+  @include mq("md") {
+    width: rem(32);
+    height: rem(32);
+  }
 }
