--- a/src/sass/page/_footer-menu__inner.scss
+++ b/src/sass/page/_footer-menu__inner.scss
@@ -10,9 +10,12 @@ margin-right: auto;
 // position: relative;
 
 @include mq("md") {
-  padding-left: 180px;
+  // padding-left: 180px;
   padding-top: 80px;
-  padding-right: 252px;
+  // padding-right: 252px;
+  padding-left: rem(25);
+  padding-right: rem(25);
+  max-width: 1130px;
 }
 }
 
