--- a/src/sass/page/_information.scss
+++ b/src/sass/page/_information.scss
@@ -31,8 +31,7 @@
     margin-top: 0;
   }
 }
-
-.information__img {
+.information__img img {
   aspect-ratio: 345/227;
   object-fit: cover;
   width: 100%;
