--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -190,5 +190,6 @@
         // bottom: rem(130);
         bottom: 4.9%;
         left: calc(50% - min(48vw, rem(620)));
+        // bottom: calc(50% - min(48vw, rem(536)));
     }
   }
