meta修正とレスポンシブ対応

--- a/src/sass/page/_about-us__container-box.scss
+++ b/src/sass/page/_about-us__container-box.scss
@@ -1,5 +1,5 @@
 @use "global" as *;
 
-.about-us__container-box {
-  max-width: rem(440);
-}
+// .about-us__container-box {
+//   max-width: rem(440);
+// }
