--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -73,7 +73,7 @@
   padding-bottom: 22px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
   margin-top: 26px;
-  max-width: 333px;
+  // max-width: 333px;
   background-color: $white;
 
   @include mq("md") {
@@ -147,9 +147,9 @@
   margin-top: 16px;
 }
 
-.blog-card__img {
-  max-width: 301px;
-}
+// .blog-card__img {
+//   max-width: 301px;
+// }
 
 .blog-card__img img {
   width: 100%;
