--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -8,8 +8,16 @@
   width: 100%;
   height: rem(80);
   border-right-color: transparent;
+  opacity: 0.7;
+  background-color: $black2;
 
   @include mq("md") {
     height: rem(90);
   }
+}
+
+.header.is-scroll {
+  background-color: $gray;
+  transition: 0.3s;
+  opacity: 1;
 }
