アスペクトレシオ修正

--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -147,9 +147,9 @@
   margin-top: 16px;
 }
 
-// .blog-card__img {
-//   max-width: 301px;
-// }
+.blog-card__img {
+  max-width: 301px;
+}
 
 .blog-card__img img {
   width: 100%;
