--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -10,6 +10,7 @@
   border-right-color: transparent;
   opacity: 0.7;
   background-color: $black2;
+  transition: 0.3s;
 
   @include mq("md") {
     height: rem(90);
