--- a/src/sass/page/_about-us__inner.scss
+++ b/src/sass/page/_about-us__inner.scss
@@ -7,6 +7,7 @@ margin-left: auto;
 margin-right: auto;
 padding-top: rem(81);
 padding-bottom: rem(74);
+max-width: rem(600);
 
 @include mq("md") {
   padding-top: rem(135);
