--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -6,10 +6,12 @@
   margin-left: auto;
   margin-right: auto;
   padding-top: rem(80);
-  padding-bottom: 105px;
+  padding-bottom: rem(105);
+  max-width: rem(600);
+
 
   @include mq("md") {
-    padding-top: 143px;
+    padding-top: rem(143);
     padding-left: rem(25);
     padding-right: rem(25);
     padding-bottom: 160px;
