--- a/src/sass/page/_footer-menu__inner.scss
+++ b/src/sass/page/_footer-menu__inner.scss
@@ -1,12 +1,13 @@
 @use "global" as *;
 
 .footer-menu__inner {
-padding-left: rem(15);
-padding-right: rem(15);
-padding-top: 30px;
-padding-bottom: 20px;
-margin-left: auto;
-margin-right: auto;
+  padding-left: rem(15);
+  padding-right: rem(15);
+  padding-top: 30px;
+  padding-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: rem(600);
 // position: relative;
 
 @include mq("md") {
