--- a/src/sass/page/_information__inner.scss
+++ b/src/sass/page/_information__inner.scss
@@ -7,6 +7,7 @@ margin-left: auto;
 margin-right: auto;
 padding-top: rem(78);
 padding-bottom: rem(84);
+max-width: rem(600);
 
 @include mq("md") {
   padding-top: 91px;
