--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -7,6 +7,8 @@
   margin-right: auto;
   padding-top: rem(81);
   padding-bottom: rem(85);
+  max-width: rem(600);
+
 
   @include mq("md") {
     padding-top: rem(135);
