--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -1,12 +1,7 @@
 @use "global" as *;
 
 .blog {
-  // width: 100%;
   position: relative;
-  // @include mq("md") {
-  // // background-image: url(/assets/images/blog-img1.jpg);
-  // height: 65%;
-  // background-size: cover;
   }
 
 
@@ -17,7 +12,7 @@
     left: 0;
     position: absolute;
     content: "";
-    height: 500px;
+    height: rem(500);
     width: 100%;
     z-index: -999;
     background-position: center;
@@ -29,13 +24,6 @@
 .blog-section-title {
   text-align: center;
 }
-// .blog {
-//   width: 100%;
-//   background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(/assets/images/blog-img1.jpg);
-//   background-size: 50% auto, cover;
-// }
-
-/* 他のスタイルルールは省略 */
 
 .blog__inner {
   position: relative;
@@ -48,47 +36,46 @@
       background: url(/assets/images/blog-logo.svg) center center / contain no-repeat;
       width: rem(437);
       height: rem(201);
-      // bottom: rem(130);
       bottom: 72.7%;
       left: calc(50% - min(48vw, rem(620)));
   }
 }
 
 .blog__inner.inner {
-  padding-top: 78px;
-  padding-left: 21px;
-  padding-right: 21px;
+  padding-top: rem(78);
+  padding-left: rem(21);
+  padding-right: rem(21);
   max-width: rem(600);
 
 
   @include mq("md") {
-    padding-top: 92px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-top: rem(92);
+    padding-left: rem(25);
+    padding-right: rem(25);
   }
 }
 
 .blog-card__item-box {
-  padding-top: 16px;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-bottom: 22px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-  margin-top: 26px;
+  padding-top: rem(16);
+  padding-left: rem(16);
+  padding-right: rem(16);
+  padding-bottom: rem(22);
+  box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+  margin-top: rem(26);
   // max-width: 333px;
   background-color: $white;
 
   @include mq("md") {
-    margin-top: 0;
-    padding-bottom: 24px;
+    margin-top: rem(0);
+    padding-bottom: rem(24);
   }
 }
 
 .blog-card__item-box:not(:first-child) {
-  margin-top: 40px;
+  margin-top: rem(40);
 
   @include mq("md") {
-    margin-top: 0;
+    margin-top: rem(0);
   }
 }
 
@@ -115,42 +102,42 @@
 }
 
 .blog-card__date {
-  font-size: 12px;
+  font-size: rem(12);
   font-weight: $regular;
   line-height: 1.5;
   font-family: Gotu;
 }
 
 .blog-card__body {
-  margin-top: 22px;
+  margin-top: rem(22);
 
   @include mq("md") {
-    margin-top: 20px;
+    margin-top: rem(20);
   }
 }
 
 .blog-card__text {
-  font-size: 16px;
+  font-size: rem(16);
   font-weight: $medium;
   line-height: 1.5;
   font-family: Noto Sans JP;
-  margin-top: -3px;
+  margin-top: rem(-3);
 
   @include mq("md") {
-    margin-top: -2px;
+    margin-top: rem(-2);
   }
 }
 
 .blog-card__text-sub {
-  font-size: 16px;
+  font-size: rem(16);
   font-weight: $regular;
   line-height: 1.5;
   font-family: Noto Sans JP;
-  margin-top: 16px;
+  margin-top: rem(16);
 }
 
 .blog-card__img {
-  max-width: 301px;
+  max-width: rem(301);
 }
 
 .blog-card__img img {
@@ -160,8 +147,7 @@
 }
 
 .blog-button-layout {
-  margin-top: 42px;
-  // padding-left: rem(68);
+  margin-top: rem(42);
   display: flex;
   justify-content: center;
 
@@ -176,8 +162,8 @@
 .blog__cards {
   @include mq("md") {
     display: flex;
-    gap: 40px;
-    margin-top: 78px;
+    gap: rem(40);
+    margin-top: rem(78);
   }
 }
 .blog.section-title {
