--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -14,7 +14,8 @@
     padding-top: rem(135);
     padding-left: rem(25);
     padding-right: rem(25);
-    padding-bottom: 144px;
+    padding-bottom: rem(144);
+    max-width: rem(1130);
     }
   }
 
