--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -14,7 +14,8 @@
     padding-top: rem(143);
     padding-left: rem(25);
     padding-right: rem(25);
-    padding-bottom: 160px;
+    padding-bottom: rem(160);
+    max-width: rem(1130);
     }
   }
 
