--- a/src/sass/page/_information__inner.scss
+++ b/src/sass/page/_information__inner.scss
@@ -14,6 +14,7 @@ max-width: rem(600);
   padding-left: rem(23);
   padding-right: rem(27);
   padding-bottom: rem(74);
+  max-width: rem(1130);
   // margin-top: 10px;
   }
 }
