--- a/src/sass/page/_footer-menu__inner.scss
+++ b/src/sass/page/_footer-menu__inner.scss
@@ -12,7 +12,7 @@
 
 @include mq("md") {
   // padding-left: 180px;
-  padding-top: 80px;
+  padding-top: rem(72);
   // padding-right: 252px;
   padding-left: rem(25);
   padding-right: rem(25);
