--- a/src/sass/page/_header__inner.scss
+++ b/src/sass/page/_header__inner.scss
@@ -16,6 +16,8 @@
     padding-left: rem(25);
     margin-right: rem(1);
     border-bottom: none;
+    // opacity: 0.7;
+    // background-color: $black2;
     // padding-right: rem(15);
   }
 }
