--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -24,15 +24,15 @@
     justify-content: center;
     @include mq("md") {
       display: block;
-      padding-left: 120px;
-      padding-right: 120px;
+      padding-left: ren(120);
+      padding-right: rem(120);
     }
   }
 
   .contact__logo {
-    max-width: 174px;
+    max-width: rem(174);
     @include mq("md") {
-      max-width: 200px;
+      max-width: rem(200);
     }
   }
 
@@ -53,31 +53,31 @@
 
     @include mq("md") {
       display: flex;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-      padding: 80px 112px 80px 50px;
+      box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+      padding: rem(80) rem(112) rem(80) rem(50);
       justify-content: space-between;
     }
   }
 
   .contact__box {
-    max-width: 295px;
+    max-width: rem(295);
     margin-left: auto;
     margin-right: auto;
 
     @include mq("md") {
       margin-left: 0;
       margin-right: 0;
-      max-width: 440px;
+      max-width: rem(440);
       width: 100%;
     }
   }
 
   .contact-information {
-    margin-top: 16px;
+    margin-top: rem(16);
 
     @include mq("md") {
       display: flex;
-      margin-top: 24px;
+      margin-top: rem(24);
     }
   }
 
@@ -91,11 +91,11 @@
   }
 
   .contact-information__item:not(:first-child) {
-    margin-top: 4px;
+    margin-top: rem(4);
   }
 
   .contact-information__item-text {
-    font-size: 16px;
+    font-size: rem(16);
     line-height: calc(24/16);
     font-weight: $regular;
     font-family: Noto Sans JP;
@@ -103,18 +103,17 @@
 
   .contact__img {
     // max-width: 295px;
-    width: 295px;
-    height: 160px;
-    margin-top: 16px;
+    width: rem(295);
+    height: rem(160);
+    margin-top: rem(16);
 
     @include mq("md") {
       // max-width: 273px;
-      width: 273px;
-      height: 148px;
+      width: rem(273);
+      height: rem(148);
       margin-top: 0;
-      margin-left: 25px;
+      margin-left: rem(25);
     }
-
   }
 
   .contact__img img {
@@ -125,16 +124,15 @@
 
   .contact-section-title__text {
     color: $green;
-    font-size: 14px;
+    font-size: rem(14);
     line-height: calc(18/14);
     font-weight: $regular;
     font-family: Noto Sans JP;
-    margin-top: 7px;
+    margin-top: rem(7);
   }
 
   .contact-button-layout {
-    margin-top: 39px;
-    // padding-left: rem(68);
+    margin-top: rem(39);
     display: flex;
     justify-content: center;
 
@@ -147,11 +145,11 @@
   }
 
   .contact.section-title {
-    margin-top: 16px;
+    margin-top: rem(16);
 
     @include mq("md") {
-      margin-top: 5px;
-      max-width: 315px;
+      margin-top: rem(5);
+      max-width: rem(315);
     }
   }
 
@@ -160,26 +158,6 @@
   .contact__inner {
     position: relative;
   }
-
-  // .contact__inner::before {
-  //   position: absolute;
-  //   content: "";
-  //   background: url(/assets/images/prco-logo.svg) center center / contain no-repeat;
-  //   width: rem(109);
-  //   height: rem(50);
-  //   // bottom: rem(130);
-  //   bottom: 87.5%;
-  //   right: 4%;
-  //   // right: calc(50% - min(48vw, 600px));
-
-  //   @include mq("md") {
-  //     width: 301px;
-  //     height: 138px;
-  //     bottom: 66.4%;
-  //     right: calc(50% - min(48vw, 669px));
-  //   }
-
-  // }
 
   .contact__inner::after {
     position: absolute;
@@ -202,12 +180,12 @@
   }
 
   .top-button-img {
-    width: 48px;
-    height: 48px;
+    width: rem(48);
+    height: rem(48);
 
     @include mq("md") {
-      width: 80px;
-      height: 80px;
+      width: rem(80);
+      height: rem(80);
     }
   }
 
@@ -231,6 +209,6 @@
 
     @include mq("md") {
       padding-left: 81px;
-      border-left: 1px solid $green;
+      border-left: rem(1) solid $green;
     }
   }
